# bluetooth

./: .gitignore  build.gradle  gradle.properties  maven-publish.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/bluetooth/: BondDevicesActivity.java  DevicesRecyclerViewAdapter.java  MainActivity.java  MyApplication.java  OnItemClickListener.java  ServerActivity.java  (+1 more)
app/src/main/res/layout/: activity_client.xml  activity_main.xml  activity_terminal.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opus/: build.gradle
opus/src/main/: AndroidManifest.xml
opus/src/main/cpp/: CMakeLists.txt  opus.cpp
speex/: build.gradle
speex/src/main/: AndroidManifest.xml
speex/src/main/cpp/: Android.mk  CMakeLists.txt  speex.cpp
speex/src/main/cpp/libspeex/: bits.c  modes.c  modes_wb.c  speex.c  speex_callbacks.c  speex_header.c  stereo.c
spp/: build.gradle  gradle.properties
spp/src/main/: AndroidManifest.xml
spp/src/main/res/layout/: activity_server.xml  item_devices.xml
spp/src/main/res/values/: strings.xml
testgattclient/: build.gradle
testgattclient/src/main/: AndroidManifest.xml
testgattclient/src/main/res/layout/: activity_main.xml  scan_result_item.xml
testgattclient/src/main/res/values/: strings.xml
testgattserver/: build.gradle
testgattserver/src/main/: AndroidManifest.xml
testgattserver/src/main/res/values/: strings.xml
testpacket/: build.gradle
testpacket/src/main/: AndroidManifest.xml
testpacket/src/main/res/values/: strings.xml
(+33 files in other folders)
